objects/Tanium_Server_License__c/Tanium_Server_License__c.object-meta.xml
<CustomObject>
    <label>Tanium Server License</label>
    <nameField>
        <label>Tanium Server License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tanium Server Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>