objects/Tanium_Server_License__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>The expiration date of the license.  In the license this is stored as an int .. like 18263 ... which is the number of days since epoch (aka jan 1, 1970)</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>