objects/Tanium_Server_License__c/fields/License_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>License_ID_Text__c</fullName>
    <description>Displays a text version of the numeric License ID field. Business owner: Andrew Briggs</description>
    <formula>TEXT( LicenseID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Text version of the License ID</inlineHelpText>
    <label>License ID (Text)</label>
    <type>Text</type>
</CustomField>