objects/Tanium_Server_License__c/fields/LicenseID__c.field-meta.xml
<CustomField>
    <fullName>LicenseID__c</fullName>
    <description>The license id as given by the license generator</description>
    <label>License ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>