objects/Tanium_Server_License__c/fields/ServerDeployment__c.field-meta.xml
<CustomField>
    <fullName>ServerDeployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Server Deployment</label>
    <referenceTo>Server_Deployment__c</referenceTo>
    <relationshipLabel>Tanium Server Licenses</relationshipLabel>
    <relationshipName>Tanium_Server_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>